# ballon-dor-analysis

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  PROJECT_NOTES.md  README.md  pyproject.toml  run.py
.github/workflows/: pages.yml
data/cache/: awards_results.parquet  club_importance_features.parquet  gdelt_attention_pool.parquet  gdelt_volume_daily.parquet  hperp_gdelt.parquet  hperp_pageviews.parquet  hype_watch_2026.parquet  merit_features.parquet  model_features.parquet  nomination_hperp_idata.nc  nomination_idata.nc  pageview_attention.parquet  pageview_attention_pool.parquet  pageviews_2026_hypewatch.parquet  placement_idata.nc  placement_idata_noduo.nc  prior_sensitivity.parquet  robustness_panel.parquet  statsbomb_tournament.parquet  team_success.parquet  tier2_pool.parquet  understat_2526_seasons.parquet
data/reference/: award_windows.csv  cb_validity_anchors.csv  cl_results.csv  fbref_defense_2023_2024.csv  fbref_defense_2024_2025.csv  league_champions.csv  player_nation.csv  tournament_results.csv
docs/: club-importance-v3.md  decisions-log.md  findings.md  gdelt-resume.md  linkedin-post.md  windowing.md
report/: ballon-dor.qmd
site/: README.md  app.js  data.js  index.html  styles.css
site/fonts/: fonts.css
src/bdor/: __init__.py  cache.py  config.py  report.py  windows.py
src/bdor/data/: __init__.py  awards.py  fbref_defense.py  fotmob.py  gdelt.py  gdelt_bq.py  pageviews.py  statsbomb.py  understat.py  wikidata.py
src/bdor/features/: __init__.py  attention.py  club_importance.py  gdelt_attention.py  hperp.py  hype.py  hype_watch.py  merit.py  pool.py  team_success.py
src/bdor/models/: __init__.py  _report.py  nomination.py  placement.py  robustness.py
tests/: test_attention.py  test_awards.py  test_cache.py  test_club_importance.py  test_config.py  test_fbref_defense.py  test_fotmob.py  test_gdelt.py  test_gdelt_bq.py  test_hperp.py  test_hype.py  test_hype_watch.py  test_merit.py  test_nomination.py  test_pageviews.py  test_placement.py  test_pool.py  test_report.py  test_robustness.py  test_statsbomb.py  test_team_success.py  test_understat.py  test_wikidata.py
